# clearCites

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
scholargraph/: .env.example  __init__.py  docker-compose.yml
scholargraph/data_pipeline/: __init__.py  graph_pusher.py  parser.py
scholargraph/data_pipeline/api_clients/: __init__.py  crossref.py  semantic_scholar.py
scholargraph/db/: schema.cypher
scholargraph/services/ai_summarizer/: __init__.py  router.py  summarizer.py
scholargraph/services/graph_api/: Dockerfile  __init__.py  main.py  requirements.txt
scholargraph/web/: Dockerfile  next.config.mjs  package-lock.json  package.json
scholargraph/web/app/: layout.tsx  page.tsx
scholargraph/web/components/: GraphCanvas.tsx  PaperDetail.tsx
scholargraph/web/hooks/: useGraphData.ts  useGraphNavigation.ts
tests/: test_graph_api.py  test_parser.py
